Fix GitHub Actions authentication for git push

--- a/.github/workflows/generate-cv.yml
+++ b/.github/workflows/generate-cv.yml
@@ -33,8 +33,10 @@ jobs:
     
     - name: Commit and push PDFs
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git config --local credential.helper store
+        echo "https://github-actions[bot]:${{ secrets.GITHUB_TOKEN }}@github.com" > ~/.git-credentials
         git add pdfs/
         git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-generated CV PDFs" && git push)
       env:
