--- a/.github/workflows/generate-cv.yml
+++ b/.github/workflows/generate-cv.yml
@@ -10,13 +10,18 @@ on:
       - '.github/workflows/generate-cv.yml'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
@@ -32,15 +37,12 @@ jobs:
         python3 generate_cv_pdf.py BOTH
     
     - name: Commit and push PDFs
-      run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git config --local credential.helper store
-        echo "https://github-actions[bot]:${{ secrets.GITHUB_TOKEN }}@github.com" > ~/.git-credentials
-        git add pdfs/
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-generated CV PDFs" && git push)
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
+        commit_message: 'Auto-generated CV PDFs'
+        force: false
 
     - name: Create Release
       if: success()
