--- a/.github/workflows/generate-cv.yml
+++ b/.github/workflows/generate-cv.yml
@@ -42,11 +42,11 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add pdfs/
-        if ! git diff --quiet && ! git diff --staged --quiet; then
+        if git diff --staged --quiet; then
+          echo "No changes to commit"
+        else
           git commit -m "Auto-generated CV PDFs"
           git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
-        else
-          echo "No changes to commit"
         fi
 
     - name: Create Release
